# ESC0830

./: README.md  third_party.rar
demo/function_cpus/: .clang-format
demo/function_cpus/ARM/: arm.cmake
demo/function_cpus/ARM/app/: ARM_app.ld  CMakeLists.txt
demo/function_cpus/ARM/include/: io_arm.h
demo/function_cpus/ARM/src/: gen.S  label.S  startup_HM4C123_IT.c  startup_HM4C123_IT_simple.c  startup_helper.S  system_HM4C123_hc.c
demo/function_cpus/MIPS/: link.ld  mips.cmake
demo/function_cpus/MIPS/app/: CMakeLists.txt  app.ld
demo/function_cpus/MIPS/include/: boot.h  core_config.h  io_uc.h  m32c0.h
demo/function_cpus/MIPS/src/: gen.S  label.S
demo/function_cpus/MIPS/src/asm/: copy_c2_ram.S  init_caches.S  init_cp0.S  init_gp_sp.S  init_gpr.S  init_isr.S  init_tlb.S  start.S  start_app.S
demo/function_cpus/RISCV/: riscv.cmake
demo/function_cpus/RISCV/app/: CMakeLists.txt  app.ld
demo/function_cpus/RISCV/include/: encoding.h  io_e906.h  plic_base.h  system.h
demo/function_cpus/RISCV/src/: e906.c  gen.S  label.S  startup.S  startup_simple.S  system.c
demo/function_cpus/application/: main.c  main.h  work.h
demo/function_cpus/application/work/: work.c
demo/function_cpus/common/include/: context.h  delay.h  driver_common.h  io_mcu.h  irq.h
demo/function_cpus/common/include/device/: HM3S9B96.h  HM4C123.h  _HM3S9B96_emac.h  _HM4C123_emac.h  core_cm3.h  core_cm4.h  system_HM3S9B96.h  system_HM4C123.h
demo/function_cpus/common/include/drivers/: hm_adc.h  hm_bitband.h  hm_can.h  hm_clkpwr.h  hm_comp.h  hm_crc.h  hm_dac.h  hm_eeprom.h  hm_emac.h  hm_exti.h  hm_flash.h  hm_gpdma.h  hm_gpio.h  hm_i2c.h  hm_i2s.h  hm_iap.h  hm_libcfg_default.h  hm_nvic.h  hm_pwm.h  hm_qei.h  hm_rtc.h  hm_ssp.h  hm_systick.h  hm_timer.h  hm_types.h  hm_uart.h  hm_udma.h  hm_wdt.h  hm_wwdt.h  system_HM4C123_common.h  uart_print.h
demo/function_cpus/common/include/drivers/usb/: usb_config.h
demo/function_cpus/common/include/plic/: plic.h  plic_core.h
demo/function_cpus/common/tools/: gen_label_map_arm.py  gen_label_map_common.py  gen_label_map_mips.py  gen_label_map_riscv.py
demo/function_cpus/output/: arm_app.elf  arm_app.lst  arm_funcboot.elf  arm_funcboot.lst  arm_rootboot.elf  arm_rootboot.lst  mips_app.elf  mips_app.lst  mips_funcboot.elf  mips_funcboot.lst  mips_rootboot.elf  mips_rootboot.lst  riscv_app.elf  riscv_app.lst  riscv_funcboot.elf  riscv_funcboot.lst  riscv_rootboot.elf  riscv_rootboot.lst
demo/output/: arm_app.elf  arm_app.lst
doc/Chinese/: ESC0830例程单模、两模、三模实测.docx
pml_tools/: pml-gui-1.0.0.vsix
pml_tools/ESC08x0ToolKits/: app.cfg  chip.cfg
